--- a/student-info.html
+++ b/student-info.html
@@ -3,60 +3,203 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Student life at Cantor College - explore our world-class facilities, academic support services, campus housing, career development, and student resources for computing and design students.">
     <title>Information for Students | Cantor College</title>
     <link rel="stylesheet" href="styles/mobile.css">
     <link rel="stylesheet" href="styles/desktop.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav role="navigation" aria-label="Main navigation">
             <div class="logo">
                 <img src="website-images-assets/resized-logo.png" alt="Cantor College Logo">
             </div>
-                <h1>Information for Students</h1>
+            <div id="burger-menu">
+                <button id="burger-button" aria-label="Toggle navigation menu" aria-expanded="false">&#9776;</button>
             </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="facilities.html">Facilities</a></li>
-                <li><a href="resources.html">Learning Resources</a></li>
-                <li><a href="staff-info.html">Staff</a></li>
-                <li><a href="student-info.html">Students</a></li>
-                <li><a href="business.html">Working with Business</a></li>
-                <li><a href="contact-us.html">Contact Us</a></li>
+            <ul class="nav-links" role="menubar">
+                <li role="none"><a href="index.html" role="menuitem">Home</a></li>
+                <li role="none"><a href="courses.html" role="menuitem">Courses</a></li>
+                <li role="none"><a href="facilities.html" role="menuitem">Facilities</a></li>
+                <li role="none"><a href="resources.html" role="menuitem">Learning Resources</a></li>
+                <li role="none"><a href="staff-info.html" role="menuitem">Staff</a></li>
+                <li role="none"><a href="student-info.html" role="menuitem" aria-current="page">Students</a></li>
+                <li role="none"><a href="business.html" role="menuitem">Working with Business</a></li>
+                <li role="none"><a href="contact-us.html" role="menuitem">Contact Us</a></li>
             </ul>
         </nav>
     </header>
-    <section id="student-info" class="student-info">
-        <div class="student-info">
-            <h2>Student Guide</h2>
-            <p>
-                Explore Cantor College: World-Class Facilities for Your Success
-                At Cantor College, we are committed to providing our students with the best possible environment to learn, create, and innovate. Our state-of-the-art facilities are designed to support your academic journey and help you thrive in your chosen field. Whether you’re studying computing, design, or technology, our campus offers everything you need to excel.
-            </p>
 
-            <ul>
-                Our Facilities Include:
-            <li> 
-                1. Advanced Computing Labs Our computing labs are equipped with the latest hardware and software, providing you with the tools you need to develop your skills in programming, cybersecurity, data science, and more. The labs are accessible 24/7, ensuring you can work on your projects at any time that suits you.
-                2. Design Studios Our design studios offer a creative space for students in graphic design, digital media, and product design. Each studio is equipped with high-end graphic tablets, professional-grade software, and large-format printers, allowing you to bring your ideas to life. The studios also feature collaborative spaces where you can work with peers and faculty on group projects.
-                3. Innovation and Makerspace Cantor College’s Innovation and Makerspace is a hub for creativity and invention. This facility is equipped with 3D printers, laser cutters, CNC machines, and other advanced prototyping tools. Whether you're working on a design project or developing a new tech product, this space provides the resources to turn your concepts into reality.
-                4. Technology Sandbox The Technology Sandbox is an experimental space where students can explore the latest in VR, AR, and AI technologies. With access to cutting-edge devices and software, you’ll be able to experiment with emerging technologies and push the boundaries of what’s possible in your field.
-                5. Collaborative Learning Spaces Our campus features numerous collaborative learning spaces designed to foster teamwork and creative problem-solving. These spaces are equipped with smartboards, video conferencing tools, and flexible seating arrangements, making them ideal for group work, study sessions, or brainstorming meetings.
-                6. Library and Resource Centre The Cantor College Library is a comprehensive resource Centre offering an extensive collection of books, journals, and digital resources related to computing, design, and technology. The library also provides quiet study areas, computer stations, and access to online databases, ensuring you have the information you need at your fingertips.
-                7. Student Hub The Student Hub is the social heart of our campus, providing a place for relaxation and connection. Here, you’ll find a café, lounge areas, and recreational facilities, making it the perfect spot to unwind between classes, meet with friends, or join student-led activities and clubs.
-                8. Career and Development Centre Our Career and Development Centre is dedicated to helping you plan your future. Offering career counseling, resume workshops, and job placement services, this Centre provides the support you need to transition from student to professional. The Centre also hosts regular employer networking events and industry talks to help you build connections in your field.
-                9. Fitness and Wellness Centre We believe in nurturing both the mind and body. Our Fitness and Wellness Centre offers a fully equipped gym, exercise studios, and a range of fitness classes to help you stay healthy and active. The Centre also includes wellness services such as yoga, meditation, and counseling to support your overall well-being.
-                10. On-Campus Housing For those who choose to live on campus, Cantor College offers modern, comfortable housing options. Our residence halls provide a supportive community environment, with amenities like high-speed internet, study lounges, and common areas where you can relax and socialize. 
-            </li>
-
-                Experience Cantor College
-                Cantor College’s facilities are designed to enhance your learning experience and support your academic and personal growth. We invite you to explore our campus, discover our resources, and make the most of everything we have to offer.
-           </ul>
+    <!-- Hero Section -->
+    <section class="hero">
+        <img src="website-images-assets/IMG_1318.jpeg" alt="Students studying in modern learning environment" class="hero-bg" width="800" height="300" loading="eager" decoding="async">
+        <div class="hero-content">
+            <h1>Information for Students</h1>
+            <p>Your guide to making the most of your Cantor College experience</p>
         </div>
     </section>
+
+    <main>
+        <section class="student-intro">
+            <h2>Explore Cantor College: World-Class Facilities for Your Success</h2>
+            <div class="intro-content">
+                <div class="intro-text">
+                    <p>
+                        At Cantor College, we are committed to providing our students with the best possible environment to learn, create, and innovate. Our state-of-the-art facilities are designed to support your academic journey and help you thrive in your chosen field. Whether you're studying computing, design, or technology, our campus offers everything you need to excel.
+                    </p>
+                </div>
+                <div class="intro-image">
+                    <img src="website-images-assets/IMG_1298.jpeg" alt="Students collaborating in modern study space" class="student-image">
+                </div>
+            </div>
+        </section>
+
+        <section class="facilities-overview">
+            <h2>Our Facilities Include</h2>
+            <div class="facilities-grid">
+                <div class="facility-item">
+                    <div class="facility-image">
+                        <img src="website-images-assets/ACES-036-Computing-Playstation-Lab-2.jpg" alt="Advanced computing laboratory" class="facility-img">
+                    </div>
+                    <div class="facility-content">
+                        <h3>1. Advanced Computing Labs</h3>
+                        <p>Our computing labs are equipped with the latest hardware and software, providing you with the tools you need to develop your skills in programming, cybersecurity, data science, and more. The labs are accessible 24/7, ensuring you can work on your projects at any time that suits you.</p>
+                    </div>
+                </div>
+
+                <div class="facility-item">
+                    <div class="facility-image">
+                        <img src="website-images-assets/IMG_1437.jpeg" alt="Creative design studio" class="facility-img">
+                    </div>
+                    <div class="facility-content">
+                        <h3>2. Design Studios</h3>
+                        <p>Our design studios offer a creative space for students in graphic design, digital media, and product design. Each studio is equipped with high-end graphic tablets, professional-grade software, and large-format printers, allowing you to bring your ideas to life.</p>
+                    </div>
+                </div>
+
+                <div class="facility-item">
+                    <div class="facility-image">
+                        <img src="website-images-assets/IMG_1441.jpeg" alt="Innovation and makerspace" class="facility-img">
+                    </div>
+                    <div class="facility-content">
+                        <h3>3. Innovation and Makerspace</h3>
+                        <p>Cantor College's Innovation and Makerspace is a hub for creativity and invention. This facility is equipped with 3D printers, laser cutters, CNC machines, and other advanced prototyping tools. Whether you're working on a design project or developing a new tech product, this space provides the resources to turn your concepts into reality.</p>
+                    </div>
+                </div>
+
+                <div class="facility-item">
+                    <div class="facility-image">
+                        <img src="website-images-assets/IMG_1439.jpeg" alt="Technology sandbox with VR equipment" class="facility-img">
+                    </div>
+                    <div class="facility-content">
+                        <h3>4. Technology Sandbox</h3>
+                        <p>The Technology Sandbox is an experimental space where students can explore the latest in VR, AR, and AI technologies. With access to cutting-edge devices and software, you'll be able to experiment with emerging technologies and push the boundaries of what's possible in your field.</p>
+                    </div>
+                </div>
+
+                <div class="facility-item">
+                    <div class="facility-image">
+                        <img src="website-images-assets/CantorLectureTheatre11.jpg" alt="Collaborative learning space" class="facility-img">
+                    </div>
+                    <div class="facility-content">
+                        <h3>5. Collaborative Learning Spaces</h3>
+                        <p>Our campus features numerous collaborative learning spaces designed to foster teamwork and creative problem-solving. These spaces are equipped with smartboards, video conferencing tools, and flexible seating arrangements, making them ideal for group work, study sessions, or brainstorming meetings.</p>
+                    </div>
+                </div>
+
+                <div class="facility-item">
+                    <div class="facility-image">
+                        <img src="website-images-assets/IMG_0170.jpeg" alt="Library and resource centre" class="facility-img">
+                    </div>
+                    <div class="facility-content">
+                        <h3>6. Library and Resource Centre</h3>
+                        <p>The Cantor College Library is a comprehensive resource centre offering an extensive collection of books, journals, and digital resources related to computing, design, and technology. The library also provides quiet study areas, computer stations, and access to online databases.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="student-life">
+            <h2>Student Life & Support</h2>
+            <div class="life-grid">
+                <div class="life-item">
+                    <div class="life-image">
+                        <img src="website-images-assets/Cantor atrium 3.jpg" alt="Student hub and social area" class="life-img">
+                    </div>
+                    <div class="life-content">
+                        <h3>Student Hub</h3>
+                        <p>The Student Hub is the social heart of our campus, providing a place for relaxation and connection. Here, you'll find a café, lounge areas, and recreational facilities, making it the perfect spot to unwind between classes, meet with friends, or join student-led activities and clubs.</p>
+                    </div>
+                </div>
+
+                <div class="life-item">
+                    <div class="life-image">
+                        <img src="website-images-assets/IMG_0523.jpeg" alt="Career development centre" class="life-img">
+                    </div>
+                    <div class="life-content">
+                        <h3>Career and Development Centre</h3>
+                        <p>Our Career and Development Centre is dedicated to helping you plan your future. Offering career counseling, resume workshops, and job placement services, this centre provides the support you need to transition from student to professional.</p>
+                    </div>
+                </div>
+
+                <div class="life-item">
+                    <div class="life-image">
+                        <img src="website-images-assets/IMG_1642.jpeg" alt="Fitness and wellness centre" class="life-img">
+                    </div>
+                    <div class="life-content">
+                        <h3>Fitness and Wellness Centre</h3>
+                        <p>We believe in nurturing both the mind and body. Our Fitness and Wellness Centre offers a fully equipped gym, exercise studios, and a range of fitness classes to help you stay healthy and active. The centre also includes wellness services such as yoga, meditation, and counseling.</p>
+                    </div>
+                </div>
+
+                <div class="life-item">
+                    <div class="life-image">
+                        <img src="website-images-assets/IMG_1808.jpeg" alt="On-campus housing" class="life-img">
+                    </div>
+                    <div class="life-content">
+                        <h3>On-Campus Housing</h3>
+                        <p>For those who choose to live on campus, Cantor College offers modern, comfortable housing options. Our residence halls provide a supportive community environment, with amenities like high-speed internet, study lounges, and common areas where you can relax and socialize.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="student-support">
+            <h2>Academic Support Services</h2>
+            <div class="support-content">
+                <div class="support-text">
+                    <h3>We're Here to Help You Succeed</h3>
+                    <p>
+                        Cantor College provides comprehensive support services to ensure every student has the resources they need to succeed academically and personally. Our dedicated support team is committed to helping you overcome challenges and achieve your goals.
+                    </p>
+                    <ul>
+                        <li><strong>Academic Tutoring:</strong> One-on-one and group tutoring sessions</li>
+                        <li><strong>Study Skills Workshops:</strong> Learn effective study techniques and time management</li>
+                        <li><strong>Mental Health Support:</strong> Counseling and wellness services</li>
+                        <li><strong>Disability Services:</strong> Accommodations and assistive technology</li>
+                        <li><strong>Financial Aid:</strong> Scholarships, grants, and financial planning</li>
+                        <li><strong>International Student Support:</strong> Visa assistance and cultural integration</li>
+                    </ul>
+                </div>
+                <div class="support-image">
+                    <img src="website-images-assets/CantorLectureTheatre4.JPG" alt="Academic support and tutoring" class="support-img">
+                </div>
+            </div>
+        </section>
+
+        <section class="experience-cta">
+            <h2>Experience Cantor College</h2>
+            <div class="cta-content">
+                <p>Cantor College's facilities are designed to enhance your learning experience and support your academic and personal growth. We invite you to explore our campus, discover our resources, and make the most of everything we have to offer.</p>
+                <a href="facilities.html" class="cta-button">Explore Our Facilities</a>
+            </div>
+        </section>
+    </main>
+
     <footer>
-    <p>2024 Cantor College. All rights reserved.</p>
+        <p>&copy; 2024 Cantor College. All rights reserved.</p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
