--- a/resources.html
+++ b/resources.html
@@ -3,65 +3,216 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Access Cantor College's comprehensive library and learning resources including digital databases, research support, study spaces, and technology services for computing and design students.">
     <title>Learning Resources | Cantor College</title>
     <link rel="stylesheet" href="styles/mobile.css">
     <link rel="stylesheet" href="styles/desktop.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav role="navigation" aria-label="Main navigation">
             <div class="logo">
                 <img src="website-images-assets/resized-logo.png" alt="Cantor College Logo">
             </div>
-                <h1>Learning Resources</h1>
+            <div id="burger-menu">
+                <button id="burger-button" aria-label="Toggle navigation menu" aria-expanded="false">&#9776;</button>
             </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="facilities.html">Facilities</a></li>
-                <li><a href="resources.html">Learning Resources</a></li>
-                <li><a href="staff-info.html">Staff</a></li>
-                <li><a href="student-info.html">Students</a></li>
-                <li><a href="business.html">Working with Business</a></li>
-                <li><a href="contact-us.html">Contact Us</a></li>
+            <ul class="nav-links" role="menubar">
+                <li role="none"><a href="index.html" role="menuitem">Home</a></li>
+                <li role="none"><a href="courses.html" role="menuitem">Courses</a></li>
+                <li role="none"><a href="facilities.html" role="menuitem">Facilities</a></li>
+                <li role="none"><a href="resources.html" role="menuitem" aria-current="page">Learning Resources</a></li>
+                <li role="none"><a href="staff-info.html" role="menuitem">Staff</a></li>
+                <li role="none"><a href="student-info.html" role="menuitem">Students</a></li>
+                <li role="none"><a href="business.html" role="menuitem">Working with Business</a></li>
+                <li role="none"><a href="contact-us.html" role="menuitem">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="resources" class="resources">
-        <h2>Guidelines</h2>
-        <div class="resource-content">
-            <h3>Rules for Governing the Use of the Library and Resource Centre</h3>
-            <h4>Introduction</h4>
-            <p>All students and staff of the College are entitled to register as members of the Library and Resource Centre and to use the facilities for the purpose of their course of study or College employment.</p>
-            <p>Membership may also be extended to other individuals and to persons nominated from other organisations: a fee is usually charged. Access to the Library and Resource Centre for study purposes may be made available to non-members by arrangement. Details are available in the External Services leaflet.</p>
-            <p>Use of facilities implies acceptance of the Library and Resource Centre rules printed below. These are designed to protect the interests of all users of the Library and Resource Centre and to ensure that the College operates within the law and can carry out its functions efficiently and effectively. The Library and Resource Centre rules apply in principle to all sites, including workstation rooms and site libraries, notwithstanding some variations in practice in the site libraries. Admission to the Library and Resource Centre is conditional upon observation of the rules and the staff are empowered to enforce them.</p>
-            <p>Breaches of the rules may be dealt with by specific Library and Resource Centre Disciplinary Action (see below), including the withdrawal of some access, and if appropriate by invoking the College’s Regulations for Students, in the case of students, or in the case of staff through the appropriate College procedures as set out in the Staff Handbook.</p>
-            
-            <h4>Rules</h4>
-            <h5>A. Access:</h5>
-            <ul>
-                <li>The use of Library and Resource Centre facilities is normally limited to use for the educational and other purposes of the College.</li>
-                <li>All individuals wishing to become members of the Library and Resource Centre must comply with the registration procedures. These include an undertaking to abide by Library and Resource Centre rules.</li>
-                <li>Individuals or organisations who are not eligible for membership but have good reason to use the Library and Resource Centre may be admitted, by arrangement, for purposes of study only. Procedures for seeking admission are outlined in the External Services leaflet. Non-members must sign the Visitors' Book on each visit, and may be required to produce written identification. Study use does not include access to the College's Academic Network.</li>
-                <li>ID cards issued by the College are not transferable from one person to another. The person named on each card is responsible for all items borrowed on it and is liable for the cost of replacement of the card or items borrowed on it in the event of loss or damage. Users of the Library and Resource Centre are reminded that they must be willing to show ID cards or other identification when requested to do so by College staff.</li>
-            </ul>
-
-            <h5>B. Use of Facilities</h5>
-            <ul>
-                <li>The Library and Resource Centre is not responsible for loss of, or damage to, the personal belongings of its users and visitors. Users must take reasonable precautions against theft of their belongings, and must not leave belongings unattended even for a very short period. Study tables/PCs may not be reserved by depositing clothing or private property on the adjacent seat. Articles left unattended may be removed by staff but will be returned on request at the Reception Desk.</li>
-                <li>All users are required to conduct themselves quietly throughout the Library and Resource Centre and conversation between users must be kept to a minimum. No conversation is permitted in those areas designated as ‘Silent’ areas.</li>
-                <li>Personal stereos may not be used in the Library and Resource Centre.</li>
-                <li>Mobile phones must be turned off in all Library and Resource Centre study areas. Their use is permitted in the enclosed stair wells of the Main Site building.</li>
-                <li>Users should not make use of mains electrical supplies to power their own equipment, including external storage devices, unless the equipment has been tested and confirmed as meeting the required Health & Safety standards. Written evidence of such compliance will be required.</li>
-                <li>Eating and drinking are not permitted in any of the public areas of the Library and Resource Centre.</li>
-                <li>Action will be taken against any person misusing furniture, facilities or materials. Any such person may be required to pay for the making good damage or loss.</li>
-            </ul>
+    <!-- Hero Section -->
+    <section class="hero">
+        <img src="website-images-assets/IMG_0170.jpeg" alt="Library and learning resources at Cantor College" class="hero-bg" width="800" height="300" loading="eager" decoding="async">
+        <div class="hero-content">
+            <h1>Learning Resources</h1>
+            <p>Comprehensive library and resource centre supporting your academic journey</p>
         </div>
     </section>
 
+    <main>
+        <section class="resources-intro">
+            <h2>Library and Resource Centre</h2>
+            <div class="intro-content">
+                <div class="intro-text">
+                    <p>
+                        The Cantor College Library and Resource Centre is the academic heart of our institution, providing students and staff with access to extensive collections, modern technology, and quiet study spaces. Our comprehensive resources support learning, research, and innovation across all our computing and design programs.
+                    </p>
+                </div>
+                <div class="intro-image">
+                    <img src="website-images-assets/IMG_1318.jpeg" alt="Students using library resources" class="resources-image">
+                </div>
+            </div>
+        </section>
+
+        <section class="membership-section">
+            <h2>Membership and Access</h2>
+            <div class="membership-content">
+                <div class="membership-image">
+                    <img src="website-images-assets/IMG_1298.jpeg" alt="Students accessing library services" class="membership-img">
+                </div>
+                <div class="membership-text">
+                    <h3>Who Can Use Our Resources</h3>
+                    <p>All students and staff of the College are entitled to register as members of the Library and Resource Centre and to use the facilities for the purpose of their course of study or College employment.</p>
+                    <p>Membership may also be extended to other individuals and to persons nominated from other organisations: a fee is usually charged. Access to the Library and Resource Centre for study purposes may be made available to non-members by arrangement.</p>
+                    <div class="membership-benefits">
+                        <h4>Member Benefits Include:</h4>
+                        <ul>
+                            <li>24/7 access to digital resources</li>
+                            <li>Book borrowing privileges</li>
+                            <li>Computer and printing services</li>
+                            <li>Study room reservations</li>
+                            <li>Research assistance</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="rules-section">
+            <h2>Rules Governing the Use of the Library and Resource Centre</h2>
+            
+            <div class="rules-intro">
+                <div class="rules-image">
+                    <img src="website-images-assets/CantorLectureTheatre5.JPG" alt="Quiet study environment" class="rules-img">
+                </div>
+                <div class="rules-text">
+                    <h3>Introduction</h3>
+                    <p>Use of facilities implies acceptance of the Library and Resource Centre rules. These are designed to protect the interests of all users and to ensure that the College operates within the law and can carry out its functions efficiently and effectively.</p>
+                    <p>The Library and Resource Centre rules apply in principle to all sites, including workstation rooms and site libraries. Admission is conditional upon observation of the rules and the staff are empowered to enforce them.</p>
+                </div>
+            </div>
+
+            <div class="rules-content">
+                <div class="rule-category">
+                    <h3>A. Access Rules</h3>
+                    <div class="rule-items">
+                        <div class="rule-item">
+                            <h4>Educational Use</h4>
+                            <p>The use of Library and Resource Centre facilities is normally limited to use for the educational and other purposes of the College.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>Registration</h4>
+                            <p>All individuals wishing to become members must comply with the registration procedures. These include an undertaking to abide by Library and Resource Centre rules.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>Visitor Access</h4>
+                            <p>Non-members may be admitted for study purposes by arrangement. Procedures for seeking admission are outlined in the External Services leaflet. Visitors must sign the Visitors' Book on each visit.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>ID Cards</h4>
+                            <p>ID cards issued by the College are not transferable. The person named on each card is responsible for all items borrowed and is liable for replacement costs in the event of loss or damage.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="rule-category">
+                    <h3>B. Use of Facilities</h3>
+                    <div class="rule-items">
+                        <div class="rule-item">
+                            <h4>Personal Belongings</h4>
+                            <p>The Library is not responsible for loss of, or damage to, personal belongings. Users must take reasonable precautions against theft and must not leave belongings unattended.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>Quiet Environment</h4>
+                            <p>All users are required to conduct themselves quietly throughout the Library. Conversation between users must be kept to a minimum. No conversation is permitted in designated 'Silent' areas.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>Electronic Devices</h4>
+                            <p>Personal stereos may not be used in the Library. Mobile phones must be turned off in all study areas. Their use is permitted in the enclosed stair wells of the Main Site building.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>Equipment Safety</h4>
+                            <p>Users should not use mains electrical supplies to power their own equipment unless it has been tested and confirmed as meeting required Health & Safety standards.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>Food and Drink</h4>
+                            <p>Eating and drinking are not permitted in any of the public areas of the Library and Resource Centre.</p>
+                        </div>
+                        <div class="rule-item">
+                            <h4>Care of Facilities</h4>
+                            <p>Action will be taken against any person misusing furniture, facilities or materials. Any such person may be required to pay for making good damage or loss.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="services-overview">
+            <h2>Our Services</h2>
+            <div class="services-grid">
+                <div class="service-item">
+                    <div class="service-image">
+                        <img src="website-images-assets/DSCF5127.jpg" alt="Digital resources and databases" class="service-img">
+                    </div>
+                    <div class="service-content">
+                        <h3>Digital Resources</h3>
+                        <p>Access to extensive online databases, e-books, journals, and digital archives covering computing, design, and technology fields.</p>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <div class="service-image">
+                        <img src="website-images-assets/IMG_1087.jpeg" alt="Research assistance" class="service-img">
+                    </div>
+                    <div class="service-content">
+                        <h3>Research Support</h3>
+                        <p>Professional librarians available to assist with research projects, citation guidance, and information literacy training.</p>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <div class="service-image">
+                        <img src="website-images-assets/IMG_1089.jpeg" alt="Study spaces" class="service-img">
+                    </div>
+                    <div class="service-content">
+                        <h3>Study Spaces</h3>
+                        <p>Variety of study environments including silent study areas, group collaboration spaces, and private study rooms.</p>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <div class="service-image">
+                        <img src="website-images-assets/IMG_1099.jpeg" alt="Technology services" class="service-img">
+                    </div>
+                    <div class="service-content">
+                        <h3>Technology Services</h3>
+                        <p>Computer workstations, printing services, scanning facilities, and access to specialized software for academic work.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact-section">
+            <h2>Need Help?</h2>
+            <div class="contact-content">
+                <div class="contact-text">
+                    <h3>Library Support Team</h3>
+                    <p>Our experienced library staff are here to help you make the most of our resources. Whether you need assistance finding materials, using databases, or understanding library policies, we're here to support your academic success.</p>
+                    <div class="contact-details">
+                        <p><strong>Library Desk:</strong> Ground Floor, Main Building</p>
+                        <p><strong>Hours:</strong> Monday-Friday 8:00 AM - 10:00 PM</p>
+                        <p><strong>Weekend:</strong> Saturday-Sunday 10:00 AM - 6:00 PM</p>
+                        <p><strong>Email:</strong> library@cantorcollege.ac.uk</p>
+                    </div>
+                </div>
+                <div class="contact-image">
+                    <img src="website-images-assets/Cantor atrium 4.jpg" alt="Library help desk" class="contact-img">
+                </div>
+            </div>
+        </section>
+    </main>
+
     <footer>
-        <p>2024 Cantor College. All rights reserved.</p>
+        <p>&copy; 2024 Cantor College. All rights reserved.</p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
